insight alignment issue

--- a/app/assets/styles/modules/_insight.scss
+++ b/app/assets/styles/modules/_insight.scss
@@ -256,12 +256,12 @@
 		font-size: 13px;
 		text-transform: uppercase; padding: 15px 0;
 		float: left; }
-.insight-banner .col-md-11 span:nth-child(2) {float: right;}
+.insight-banner .col-md-11 span:nth-child(3) {float: right;}
 
 @media screen and (max-width: 540px){
 	.insight-banner .col-md-11 span { 
 	float: none; }
-.insight-banner .col-md-11 span:nth-child(2) {
+.insight-banner .col-md-11 span:nth-child(3) {
 	float: none;}
 }
 	.sidebar {
